feat: criacao do endpoint para listar alunos em diretor