@@ -4,9 +4,7 @@ import com.gestao_escolar.model.dto.ResListTurmaDTO;
 import com.gestao_escolar.repository.TurmaRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TurmaService {
@@ -16,7 +14,7 @@ public class TurmaService {
 
     public List<ResListTurmaDTO> listarTurmas() {
         var listTurmas = turmaRepository.findAll();
-        return listTurmas.stream().map(ResListTurmaDTO::new).collect(Collectors.toList());
+        return listTurmas.stream().map(ResListTurmaDTO::new).toList();
     }
 
 }
